tests/NormalTests/paczka1/small_fuzzy/28332120.err
Error in line 2: A577 A577 99,7
Error in line 5: rIfTDMKDpFJ A202 63,9
Error in line 6: rIfTDMKDpFJ S593 75,2
Error in line 4: A577 A243 43,8
Error in line 10: S9MVv4lM A202 72,7
